fixtures/ast/errors/generic_type_mismatch/source.able
fn identity<T: Error>(value) {
  value
}

identity<i32>(5)
